add result component

--- a/src/components/not-found/not-found.scss
+++ b/src/components/not-found/not-found.scss
@@ -1,10 +1,10 @@
 .not-found {
-  background-image: url(../../../assets/images/404.png);
+  // background-image: url(../../../assets/images/404.png);
   position: absolute;
   top: 0;
   background-repeat: no-repeat;
   background-position: center;
-  background-color: $gray-200;
+  // background-color: $gray-200;
   left: 0;
   bottom: 0;
   right: 0;
