--- a/src/components/shared/navbar/navbar.scss
+++ b/src/components/shared/navbar/navbar.scss
@@ -1,45 +1,11 @@
-
+.navbar-red, .btn-conf {
+	background-color: #f73c39;
+	color: #fff;
+}
 .input-group {
-	max-width: 500px;
-	.form-control,
-	.input-group-text {
-		// background-color: $blue-900;
-		// border-color: $blue-700;
-		// color: $white;
-	}
-	.form-control {
-		border-width: 1px 0 1px 1px;
-	}
-	.input-group-text {
-		border-width: 1px 1px 1px 0;
-		cursor: pointer;
-		position: relative;
-		&:before {
-			// border-left: 1px solid $blue-700;
-			content: "";
-			height: 1.5rem;
-			left: 0;
-			margin-top: -0.75rem;
-			position: absolute;
-			top: 50%;
-		}
-	}
+	max-width: 450px;
 }
 
-.nav-actions {
-	> .navbar-nav {
-		position: relative;
-		.nav-link {
-		    padding-right: 1rem;
-		    padding-left: 1rem;
-		}
-		&:before {
-			// border-left: 1px solid $blue-700;
-			content: "";
-			height: calc(100% + 8px);
-			left: 0;
-			position: absolute;
-			top: -4px;
-		}
-	}
+label, p {
+	font-size: 10px;
 }
