create config component and filter videos

--- a/src/components/main/main.html
+++ b/src/components/main/main.html
@@ -1,26 +1,30 @@
-<div v-if="videos">
-  <nav class="navbar navbar-expand-lg justify-content-between mb-2 border-bottom">
-    <h5>Total Results: {{ results.pageInfo.totalResults }}</h5>
-    <h6>Top Keywords: 
-      <span v-for="word of topKeywords">{{ word }}</span>
-    </h6>
-  </nav>
-  <div class="container">
-    <div class="row">
-      <div class="card col-md-3" v-for="video of videos">
-        <img class="card-img-top" :src="video.snippet.thumbnails.high.url" :alt="video.snippet.channelTittle">
-        <div class="card-body">
-          <h5 class="card-title">{{ video.snippet.title }}</h5>
-          <p class="card-text" v-html="video.snippet.description"></p>
-          <a v-bind:href="'https://www.youtube.com/watch?v=' + video.id.videoId" target="_blank" class="btn btn-primary">Watch Video</a>
+<div>
+  
+  <div v-if="videos">
+    <nav class="navbar navbar-expand-lg justify-content-between mb-2 border-bottom">
+      <h5>Total Results: {{ results.pageInfo.totalResults }}</h5>
+      <h6>Top Keywords: 
+        <span v-for="word of topKeywords">{{ word }}, </span>
+      </h6>
+    </nav>
+    <div class="container">
+      <div class="row">
+        <div class="card col-md-3" v-for="video of videos">
+          <img class="card-img-top" :src="video.snippet.thumbnails.high.url" :alt="video.snippet.channelTittle">
+          <div class="card-body">
+            <h5 class="card-title">{{ video.snippet.title }}</h5>
+            <p class="card-text" v-html="video.snippet.description"></p>
+            <a v-bind:href="'https://www.youtube.com/watch?v=' + video.id.videoId" target="_blank" class="btn btn-primary">Watch Video</a>
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
-
-<div class="container" v-else>
-  <div class="row">
-    <h4>Search for videos</h4>
+  
+  <div class="container" v-else>
+    <div class="row">
+      <h4>Search for videos</h4>
+    </div>
   </div>
+  <ConfigurationModal v-if="loading" />
 </div>
