--- a/src/components/main/main.html
+++ b/src/components/main/main.html
@@ -3,19 +3,19 @@
   <div v-if="videos">
     <nav class="navbar navbar-expand-lg justify-content-between mb-2 border-bottom">
       <h6>Total Days: {{ schedule.length }}</h6>
-      <h6>Top Keywords: 
+      <span>Top Keywords: 
         <span v-for="word of topKeywords">{{ word }}, </span>
-      </h6>
+      </span>
     </nav>
-    <div class="container">
-      <div class="row" v-for="day of schedule">
-        <h2>{{ day.name }}</h2>
-        <div class="card col-md-3" v-for="video of day.videos">
+    <div class="container" v-for="day of schedule">
+      <h2>{{ day.name }}</h2>
+      <div class="row" >
+        <div class="card" v-for="video of day.videos">
           <img class="card-img-top" :src="video.snippet.thumbnails.high.url" :alt="video.snippet.channelTittle">
           <div class="card-body">
             <h5 class="card-title">{{ video.snippet.title }}</h5>
             <p class="card-text" v-html="video.snippet.description"></p>
-            <a v-bind:href="'https://www.youtube.com/watch?v=' + video.id.videoId" target="_blank" class="btn btn-primary">Watch Video</a>
+            <a v-bind:href="'https://www.youtube.com/watch?v=' + video.id" target="_blank" class="btn btn-primary">Watch Video</a>
           </div>
         </div>
       </div>
