--- a/src/components/configuration/configuration.html
+++ b/src/components/configuration/configuration.html
@@ -10,39 +10,46 @@
             <form @submit.prevent="saveConfigurations">
                 <div class="modal-body">
                     <p>Here is our default configuration time for watch video per day. Configure on your own way or just click
-                        "Save" to present the results. (time in minutes)</p>
-                    <div class="form-group">
-                        <label for="sunday">Sunday</label>
-                        <input type="number" name="sunday" v-model="watchTime.sunday">
+                        "Save". (minutes)</p>
+
+                    <div class="form-group mb-2">
+                        <span for="sunday">Sunday</span>
+                        <input type="text" class="form-control" v-model="watchTime.sunday">
                     </div>
-                    <div class="form-group">
-                        <label for="monday">Monday</label>
-                        <input type="number" name="monday" v-model="watchTime.monday">
+
+                    <div class="form-group mb-2">
+                        <span for="monday">Monday</span>
+                        <input type="text" class="form-control" v-model="watchTime.monday">
                     </div>
-                    <div class="form-group">
-                        <label for="tuesday">Tuesday</label>
-                        <input type="number" name="tuesday" v-model="watchTime.tuesday">
+
+                    <div class="form-group mb-2">
+                        <span for="tuesday">Tuesday</span>
+                        <input type="text" class="form-control" v-model="watchTime.tuesday">
                     </div>
-                    <div class="form-group">
-                        <label for="wednesday">Wednesday</label>
-                        <input type="number" name="wednesday" v-model="watchTime.wednesday">
+
+                    <div class="form-group mb-2">
+                        <span for="wednesday">Wednesday</span>
+                        <input type="text" class="form-control" v-model="watchTime.wednesday">
                     </div>
-                    <div class="form-group">
-                        <label for="thursday">Thursday</label>
-                        <input type="number" name="thursday" v-model="watchTime.thursday">
+
+                    <div class="form-group mb-2">
+                        <span for="thursday">Thursday</span>
+                        <input type="text" class="form-control" v-model="watchTime.thursday">
                     </div>
-                    <div class="form-group">
-                        <label for="friday">Friday</label>
-                        <input type="number" name="friday" v-model="watchTime.friday">
+
+                    <div class="form-group mb-2">
+                        <span for="friday">Friday</span>
+                        <input type="text" class="form-control" v-model="watchTime.friday">
                     </div>
-                    <div class="form-group">
-                        <label for="saturday">Saturday</label>
-                        <input type="number" name="saturday" v-model="watchTime.saturday">
+
+                    <div class="form-group mb-2">
+                        <span for="saturday">Saturday</span>
+                        <input type="text" class="form-control" v-model="watchTime.saturday">
                     </div>
 
                 </div>
                 <div class="modal-footer">
-                    <button type="submit" class="btn btn-primary">Save</button>
+                    <button type="submit" class="btn btn-success">Save</button>
                 </div>
             </form>
         </div>
