--- a/src/components/main/main.html
+++ b/src/components/main/main.html
@@ -1,30 +1,38 @@
 <div>
-  
+
   <div v-if="videos">
     <nav class="navbar navbar-expand-lg justify-content-between mb-2 border-bottom">
-      <h6>Total Days: {{ schedule.length }}</h6>
-      <span>Top Keywords: 
-        <span v-for="word of topKeywords">{{ word }}, </span>
-      </span>
+      <span>Total Days: {{ schedule.length }}</span>
+      <span>Top Keywords: {{ topKeywords }}</span>
     </nav>
     <div class="container" v-for="day of schedule">
-      <h2>{{ day.name }}</h2>
-      <div class="row" >
-        <div class="card" v-for="video of day.videos">
-          <img class="card-img-top" :src="video.snippet.thumbnails.high.url" :alt="video.snippet.channelTittle">
-          <div class="card-body">
-            <h5 class="card-title">{{ video.snippet.title }}</h5>
-            <p class="card-text" v-html="video.snippet.description"></p>
-            <a v-bind:href="'https://www.youtube.com/watch?v=' + video.id" target="_blank" class="btn btn-primary">Watch Video</a>
+      <h3 class="day-title mt-4">{{ day.name }}</h3>
+      <p class="card-subtitle">{{ day.videos.length }} videos</p>
+
+      <div v-if="day.videos.length > 0">
+        <a class="yt-card" v-bind:href="'https://www.youtube.com/watch?v=' + video.id" target="_blank" v-for="video of day.videos">
+          <div class="row border-bottom mb-3">
+            <div class="col-md-3 mt-3 mb-4">
+              <img :src="video.snippet.thumbnails.high.url" class="card-image">
+            </div>
+            <div class="col-md-9 px-3 mt-3 mb-4">
+              <div class="card-block px-3">
+                <h4 class="card-title">{{ video.snippet.title }}</h4>
+                <p class="card-text">{{ video.snippet.description }}</p>
+              </div>
+            </div>
           </div>
-        </div>
+        </a>
+      </div>
+      <div v-else class="row border-bottom mb-5">
+        <h6 class="no-video">No videos today</h6>
       </div>
     </div>
   </div>
-  
+
   <div class="container" v-else>
     <div class="row">
-      <h4>Search for videos</h4>
+      <h6 class="no-search">You have not done any search yet</h6>
     </div>
   </div>
   <ConfigurationModal v-if="loading" />
