--- a/src/components/not-found/not-found.scss
+++ b/src/components/not-found/not-found.scss
@@ -1,5 +1,5 @@
 .not-found {
-  // background-image: url(../../../assets/images/404.png);
+  background-image: url(../../assets/images/404.png);
   position: absolute;
   top: 0;
   background-repeat: no-repeat;
