--- a/src/components/shared/navbar/navbar.scss
+++ b/src/components/shared/navbar/navbar.scss
@@ -19,3 +19,17 @@ a {
 label, p {
 	font-size: 10px;
 }
+
+@media (max-width: 480px) {
+    .btn-conf {
+		position: absolute;
+		top: 10px;
+		right: 15px;
+	} 
+	.navbar-brand {
+		margin-bottom: 5px;
+	}
+	.input-group {
+		margin-bottom: 10px;
+	}
+}
